# ai-server

./: .gitignore  README.md  docker-compose.ai.yml  docker-compose.yml
.github/workflows/: deploy-ai.yml
emotion/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
emotion/src/: main.py
evaluate/: Dockerfile  docker-compose.yml  pyproject.toml  temp_code.py
evaluate/app/: main.py
interview/: .dockerignore  .gitignore  Dockerfile  Readme.md  backup.py  entrypoint.sh  graph.mmd  graph_backup  nodes_old.py  pyproject.toml
interview/src/: main.py  test2.py  test_main.py  visual.py
interview/src/interview/: chroma_qa.py  config.py  graph.py  lang_app.py  model.py  nodes.py  predict_keepGoing.py  question_bank.py  test_graph.py
interview/src/interview/node/: analyze.py  control.py  question.py  rules.py
interview/src/interview/prompts/: bridge_prompts.py  next_question_prompt.txt  topic_prompts.py
interview/src/koelectra/: config.json
interview/src/stt/: corrector.py  stt_app.py  stt_test.py  transcriber.py
interview/src/utils/: chroma_qa.py  chroma_setup.py  constants.py  qa_classify.py  question_filter.py
interview/test_src/: main.py  test_main.py
interview/test_src/interview/: graph.py  model.py  nodes.py
interview/test_src/interview/prompts/: analyze_prompt.txt
interview/test_src/stt/: stt_app.py  transcriber.py
interview/uploads/: 118da9af-0f2e-4213-95d3-dda034245a32.m4a
ocr/: .dockerignore  Dockerfile  README.md  pyproject.toml
ocr/src/: main.py
ocr/src/utils/: extractor.py  text_cleaner.py
tracking/: .gitignore  Dockerfile  README.md  pyproject.toml
tracking/src/: main.py
tracking/src/blink_detection/: FaceMeshModule.py  blink_detection.py  blink_video.py  utils.py
tracking/src/gaze_detection/: gaze_detection.py  gaze_video.py
tracking/src/hand_detection/: hand_detection.py  hand_realtime.py  hand_video.py
tracking/src/head_detection/: head_detection.py  head_pose_module.py  head_pose_video_module.py  video_head_pose_analysis.py
tracking/src/head_pose/: video_head_pose_analysis.py
tracking/src/utils/: common.py
