[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["TP9NS <pshccxx@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
# ↑ 패키지 경로가 src일 경우 추가 (없으면 설치 안됨)

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
langgraph = ">=0.6.2,<0.7.0"
chromadb = ">=1.0.15,<2.0.0"
langchain = ">=0.3.27,<0.4.0"
langchain-openai = ">=0.3.28,<0.4.0"
imageio-ffmpeg = ">=0.6.0,<0.7.0"
ffmpeg-python = ">=0.2.0,<0.3.0"
faster-whisper = ">=1.1.1,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
