[project]
name = "interview"
version = "0.1.0"
description = ""
authors = [
    {name = "seongmin",email = "sungmin2959@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "langgraph (>=0.6.2,<0.7.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "faster-whisper (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
