[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["seongmin <sungmin2959@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
chromadb = ">=1.0.15,<2.0.0"
langgraph = ">=0.6.2,<0.7.0"
langchain-openai = ">=0.3.28,<0.4.0"
llvmlite = ">=0.44.0,<0.45.0"
python-multipart = ">=0.0.20,<0.0.21"
ffmpeg-python = ">=0.2.0,<0.3.0"
faster-whisper = ">=1.1.1,<2.0.0"
sentence-transformers = "^5.1.0"
safetensors = "^0.6.2"
transformers = "^4.55.2"
pydot = "^4.0.1"
graphviz = "^0.21"
json-repair = "^0.50.0"
dirtyjson = "^1.0.8"

# OCR 의존성
pypdf2 = ">=3.0.1,<4.0.0"
python-docx = ">=1.2.0,<2.0.0"
pymupdf = ">=1.26.3,<2.0.0"
regex = ">=2025.7.34,<2026.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
